--- a/css/classes-layout.css
+++ b/css/classes-layout.css
@@ -9,6 +9,7 @@
 */
 .container::after {
   display: block;
+  display: contents;
   clear: both;
   line-height: 0;
   height: 0;
@@ -252,6 +253,7 @@
   width: 100%; }
   .p-container::after {
     display: block;
+    display: contents;
     clear: both;
     line-height: 0;
     height: 0;
@@ -262,6 +264,7 @@
     float: left; }
     .p-container > .column-1::after {
       display: block;
+      display: contents;
       clear: both;
       line-height: 0;
       height: 0;
@@ -272,6 +275,7 @@
     float: left; }
     .p-container > .column-2::after {
       display: block;
+      display: contents;
       clear: both;
       line-height: 0;
       height: 0;
@@ -282,6 +286,7 @@
     float: left; }
     .p-container > .column-3::after {
       display: block;
+      display: contents;
       clear: both;
       line-height: 0;
       height: 0;
@@ -296,6 +301,7 @@
     float: left; }
     .p-container > .column-4::after {
       display: block;
+      display: contents;
       clear: both;
       line-height: 0;
       height: 0;
@@ -318,6 +324,7 @@
     float: left; }
     .p-container > .column-5::after {
       display: block;
+      display: contents;
       clear: both;
       line-height: 0;
       height: 0;
@@ -340,6 +347,7 @@
     float: left; }
     .p-container > .column-6::after {
       display: block;
+      display: contents;
       clear: both;
       line-height: 0;
       height: 0;
@@ -369,6 +377,7 @@
   column-count: 1; }
   .text-col-1::after {
     display: block;
+    display: contents;
     clear: both;
     line-height: 0;
     height: 0;
@@ -380,6 +389,7 @@
   column-count: 2; }
   .text-col-2::after {
     display: block;
+    display: contents;
     clear: both;
     line-height: 0;
     height: 0;
@@ -391,6 +401,7 @@
   column-count: 3; }
   .text-col-3::after {
     display: block;
+    display: contents;
     clear: both;
     line-height: 0;
     height: 0;
@@ -406,6 +417,7 @@
   column-count: 4; }
   .text-col-4::after {
     display: block;
+    display: contents;
     clear: both;
     line-height: 0;
     height: 0;
@@ -421,6 +433,7 @@
   column-count: 5; }
   .text-col-5::after {
     display: block;
+    display: contents;
     clear: both;
     line-height: 0;
     height: 0;
@@ -441,6 +454,7 @@
   column-count: 6; }
   .text-col-6::after {
     display: block;
+    display: contents;
     clear: both;
     line-height: 0;
     height: 0;
