--- a/scss/layout/top/_menu.scss
+++ b/scss/layout/top/_menu.scss
@@ -1,87 +1,112 @@
-@import "../../mixins/mixins";
+// Variables in case of expanding the list of available classes
+$header: header, ".header";
+$nav: nav, ".navigation", ".menu";
+$logo: ".logo", ".logotype", "input[type='image']";
+$menu: ul, "ul.menu"; /* Don't use <menu> or <menuitem> as it is Deprecated and WILL be removed */
 
-$height: 140px;
+// Header
+#{$header} {
+	@include paddingEnds($small);
+	@include paddingSides($small);
+	width: 100%;
+	
+	// Menu
+	&> #{$nav} {
+		@include template-grid;
+		@include marginAuto;
+		@include innerWidth;
+		position: relative;
+		height: 100px;
+		
+		&.space-between {
+			justify-content: space-between;
+		}
+		
+		&.start {
+			justify-content: start;
+		}
+		
+		&.end {
+			justify-content: end;
+		}
+		
+		&.center {
+			justify-content: center;
+		}
+		
+		@include mq(tablet) { height: auto; grid-template-rows: auto; }
+		@include mq(phone) { height: auto; grid-template-rows: auto; }
+		
+		& #{$logo} {
+			height: auto;
+			max-height: 100%;
+			width: auto;
+			max-width: 100%;
 
-/* Start nav */
-nav.nav-container {
-
-    width: 100%;
-    position: relative;
-    @include paddingEnds($x-small);
-    @include paddingSides($x-small);
-
-    /* Menu */
-    & .menu {
-        position: relative;
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 120px;
-        grid-column-gap: 1%;
-        justify-content: center;
-        width: 80vw;
-        margin: {
-        left: auto;
-        right: auto;
-    }
-
-        /* In case of small screen, center everything */
-        @include mq(tablet){width: 100%; justify-content: space-around;}
-        @include mq(phone){grid-template-columns: 100%;}
-
-        &.logo-top {
-            grid-template-columns: 100%;
-            grid-template-rows: 100% 100%;
-			&> input[type=image], & .logo, .logo > img {
-				max-width: 100%;
-				max-height: 100%;
-				height: 100%;
+			&.right {
+				justify-self: end;
 			}
-        }
 
-        &.logo-right {
-            &> ul {
-                grid-row: 1;
-                @include mq(tablet){grid-row: 2;}
-            }
-        }
+			&.center {
+				justify-self: center;
+			}
+			
+			&> img {
+				height: 100%;
+				max-height: 100%;
+				width: auto;
+				max-width: 100%;
+				object-fit: contain;
+			}
+			
+			@include mq(tablet) {
+				@include marginAuto;
+				display: flex;
+				justify-content: center;
+				justify-self: center;
+			}
+			@include mq(phone) {
+				@include marginAuto;
+				display: flex;
+				justify-content: center;
+				justify-self: center;
+			}
+		}
+		
+		& #{$menu} {
+			min-width: 100%;
+			max-width: 100%;
+			width: 100%;
+			align-self: center;
+			white-space: nowrap;
+			
+			@include mq(tablet) {
+				display: flex;
+				&> li {
+					flex: 1;
+				}
+			}
+			
+			&> li {
+				display: inline-block;
+				position: relative;
+				
+				@include mq(tablet) {
+					display: block;
+				}
+				
+				@include mq(phone) {
+					display: block;
+				}
 
-        &> input[type=image], & .logo, .logo > img, &> ul, &> input {
-            @include marginAuto;
-        }
-
-        &> input[type=image], & .logo, .logo > img, &> input {
-            height: 100%; /* F*ck you, -webkit- max height bug... */
-            max-height: 100%;
-        }
-
-        &> ul {
-            align-self: center;
-        }
-
-        &> ul li, &> li {
-            float: left;
-        }
-
-        &> ul li a, &> li a {
-            display: block;
-			@include paddingSides($x-small);
-        }
-
-        /* Give option of spanning the <menu> 100%, but still keep the responsiveness */
-        &.fluid {
-            width: 100vw;
-            grid-column-gap: 0;
-            &> input[type=image], & .logo, &> ul, &> input {
-                margin: 0;
-            }
-            &> input[type=image], & .logo {
-                justify-self: start;
-                @include max(md) {justify-self: center;}
-            }
-            &> ul {
-                justify-self: end;
-                @include max(md) {justify-self: center;}
-            }
-        }
-    }
+				&> a {
+					display: block;
+					font-size: 1rem;
+					padding: 10px;
+					text-align: center;
+					white-space: nowrap;
+				}
+			}
+		}
+	}
 }
