--- a/scss/mixins/_general.scss
+++ b/scss/mixins/_general.scss
@@ -24,6 +24,7 @@
 @mixin clearfix() {
   &::after {
     display: block;
+    display: contents;
     clear: both;
     line-height: 0;
     height: 0;
@@ -33,6 +34,7 @@
 
 @mixin ccf() {
   &:before, &:after {
+    display: block;
     display: contents;
     clear: both;
     content: " ";
@@ -172,4 +174,90 @@
   @else {
     #{$property}: $value;
   }
+}
+
+@mixin template-flexbox {
+	display: flex;
+	justify-content: center;
+	
+	@include mq() {
+		flex-flow: row wrap;
+	}
+	@include mq(big-desktop) {
+		flex-flow: row wrap;
+	}
+	@include mq(desktop) {
+		flex-flow: row wrap;
+	}
+	@include mq(tab-x) {
+		flex-flow: row wrap;
+	}
+	@include mq(tablet) {
+		flex-flow: column wrap;
+	}
+	@include mq(phone) {
+		flex-flow: column wrap;
+	}
+}
+
+@mixin gtc { grid-auto-flow: column; justify-content: space-around; }
+@mixin gtc-tablet { grid-auto-flow: column; justify-content: space-around; }
+@mixin gtr { grid-auto-flow: row; }
+
+@mixin template-grid {
+	display: grid;
+	
+	@include mq() {
+		@include gtc;
+	}
+	
+	@include mq(big-desktop) {
+		@include gtc;
+	}
+	
+	@include mq(desktop) {
+		@include gtc;
+	}
+	
+	@include mq(tab-x) {
+		@include gtc;
+	}
+	
+	@include mq(tablet) {
+		@include gtr;
+	}
+	
+	@include mq(phone) {
+		@include gtr;
+	}
+}
+
+@mixin innerWidth {
+	@include mq() {
+		min-width: 1920px;
+		max-width: 1920px;
+        @include marginAuto;
+	}
+	@include mq(big-desktop) {
+		min-width: 1600px;
+		max-width: 1920px;
+	}
+	@include mq(desktop) {
+		min-width: 1024px;
+		max-width: 1600px;
+	}
+	@include mq(tab-x) {
+		min-width: 768px;
+		max-width: 1024px;
+	}
+	@include mq(tablet) {
+		min-width: 100%;
+		max-width: 100%;
+	}
+	@include mq(phone) {
+		min-width: 100%;
+		max-width: 100%;
+	}
+	
+	//width: 100%;
 }
