--- a/test/forms.pug
+++ b/test/forms.pug
@@ -1,43 +1,45 @@
 doctype html
-head
-  meta(charset='UTF-8')
-  meta(content='width=device-width, initial-scale=1.00002, shrink-to-fit=no', name='viewport')
-  title Lib
-  link(href='../css/library.css', rel='stylesheet')
-  style(media='screen').
-    <![CDATA[
-    \.ie7 {
-    display: none !important;
-    }
-    ]]>
-form(action='')
-  fieldset
-    legend Legend Test
-    input(type='text')
-    input(type='search')
-    input(type='button', value='Submit')
-    button Submit
-    input(type='checkbox')
-    input(type='checkbox')
-    input(type='checkbox')
-    input(type='checkbox')
-    input(type='checkbox')
-    input.ie7(type='color')
-    input(type='date')
-    input(type='datetime-local')
-    input(type='email')
-    input(type='file')
-    input(alt='', src='', type='image')
-    input(type='month')
-    input(type='number')
-    input(type='radio')
-    input(type='radio')
-    input(type='radio')
-    input(type='radio')
-    input(type='radio')
-    input(max='10', min='0', type='range')
-    input(type='reset')
-    select
-      option(value='Test') Test
-      option(value='Test 2') Test 2
-    textarea
+html
+  head
+    meta(charset='UTF-8')
+    meta(content='width=device-width, initial-scale=1.00002, shrink-to-fit=no', name='viewport')
+    title Lib
+    link(href='../css/library.css', rel='stylesheet')
+    style(media='screen').
+      <![CDATA[
+      \.ie7 {
+      display: none !important;
+      }
+      ]]>
+  body
+    form(action='')
+      fieldset
+        legend Legend Test
+        input(type='text')
+        input(type='search')
+        input(type='button', value='Submit')
+        button Submit
+        input(type='checkbox')
+        input(type='checkbox')
+        input(type='checkbox')
+        input(type='checkbox')
+        input(type='checkbox')
+        input.ie7(type='color')
+        input(type='date')
+        input(type='datetime-local')
+        input(type='email')
+        input(type='file')
+        input(alt='', src='', type='image')
+        input(type='month')
+        input(type='number')
+        input(type='radio')
+        input(type='radio')
+        input(type='radio')
+        input(type='radio')
+        input(type='radio')
+        input(max='10', min='0', type='range')
+        input(type='reset')
+        select
+          option(value='Test') Test
+          option(value='Test 2') Test 2
+        textarea
