--- a/test/colors.pug
+++ b/test/colors.pug
@@ -1,64 +1,65 @@
 doctype html
-head
-  meta(charset='UTF-8')
-  meta(content='width=device-width, initial-scale=1.00002', name='viewport')
-  title Lib
-  link(href='../css/library.css', rel='stylesheet')
+html
+  head
+    meta(charset='UTF-8')
+    meta(content='width=device-width, initial-scale=1.00002', name='viewport')
+    title Lib
+    link(href='../css/library.css', rel='stylesheet')
+  body
+    .grid-container#colors
+      .column-1.bg-white.push-p
+        p .bg-white
 
-.grid-container#colors
-  .column-1.bg-white.push-p
-    p .bg-white
-    
-  .column-1.bg-gray.push-p
-    p .bg-gray
-    
-  .column-1.bg-black.push-p
-    p .bg-black
-    
-  .column-1.bg-red.push-p
-    p .bg-red
-    
-  .column-1.bg-burntorange.push-p
-    p .bg-burntorange
-    
-  .column-1.bg-crustred.push-p
-    p .bg-crustred
-    
-  .column-1.bg-orange.push-p
-    p .bg-orange
-    
-  .column-1.bg-caliorange.push-p
-    p .bg-caliorange
-    
-  .column-1.bg-pink.push-p
-    p .bg-pink
-    
-  .column-1.bg-purple.push-p
-    p .bg-purple
-    
-  .column-1.bg-studiopurple.push-p
-    p .bg-studiopurple
-    
-  .column-1.bg-blue.push-p
-    p .bg-blue
-    
-  .column-1.bg-marineblue.push-p
-    p .bg-marineblue
-    
-  .column-1.bg-deepblue.push-p
-    p .bg-deepblue
-    
-  .column-1.bg-lightblue.push-p
-    p .bg-lightblue
-    
-  .column-1.bg-green.push-p
-    p .bg-green
-    
-  .column-1.bg-gossipgreen.push-p
-    p .bg-gossipgreen
-    
-  .column-1.bg-salemgreen.push-p
-    p .bg-salemgreen
-    
-  .column-1.bg-yellow.push-p
-    p .bg-yellow
+      .column-1.bg-gray.push-p
+        p .bg-gray
+
+      .column-1.bg-black.push-p
+        p .bg-black
+
+      .column-1.bg-red.push-p
+        p .bg-red
+
+      .column-1.bg-burntorange.push-p
+        p .bg-burntorange
+
+      .column-1.bg-crustred.push-p
+        p .bg-crustred
+
+      .column-1.bg-orange.push-p
+        p .bg-orange
+
+      .column-1.bg-caliorange.push-p
+        p .bg-caliorange
+
+      .column-1.bg-pink.push-p
+        p .bg-pink
+
+      .column-1.bg-purple.push-p
+        p .bg-purple
+
+      .column-1.bg-studiopurple.push-p
+        p .bg-studiopurple
+
+      .column-1.bg-blue.push-p
+        p .bg-blue
+
+      .column-1.bg-marineblue.push-p
+        p .bg-marineblue
+
+      .column-1.bg-deepblue.push-p
+        p .bg-deepblue
+
+      .column-1.bg-lightblue.push-p
+        p .bg-lightblue
+
+      .column-1.bg-green.push-p
+        p .bg-green
+
+      .column-1.bg-gossipgreen.push-p
+        p .bg-gossipgreen
+
+      .column-1.bg-salemgreen.push-p
+        p .bg-salemgreen
+
+      .column-1.bg-yellow.push-p
+        p .bg-yellow
